@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-22T12:30:39Z",
-  "count_outdated" : 2566,
-  "uniques_outdated" : 832,
-  "count" : 2608,
-  "uniques" : 845,
+  "timestamp" : "2024-06-24T01:16:49Z",
+  "count_outdated" : 2569,
+  "uniques_outdated" : 833,
+  "count" : 2609,
+  "uniques" : 846,
   "views" : [
-    {
-      "timestamp": "2024-06-09T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-06-10T00:00:00Z",
       "count": 12,
@@ -85,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-06-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
