@@ -1,12 +1,7 @@
 {
-  "count": 42,
+  "count": 40,
   "uniques": 10,
   "views": [
-    {
-      "timestamp": "2024-06-09T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-06-10T00:00:00Z",
       "count": 12,
@@ -46,6 +41,11 @@
       "timestamp": "2024-06-21T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-06-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
